{
    "name": "FPSInputManager",
    "maps": [
        {
            "name": "FPSActionMap",
            "id": "67d5f8ef-51d1-41fd-9131-25e0672e6cbb",
            "actions": [
                {
                    "name": "FPSMovementAction",
                    "type": "Value",
                    "id": "c4a737a9-0c92-43f3-bf8c-3c03b5b1b600",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FPSJumpAction",
                    "type": "Button",
                    "id": "2d8b6b9a-82ec-4305-9454-63b6f75a3131",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FPSLookAction",
                    "type": "PassThrough",
                    "id": "12aeeabc-d469-48e8-ad62-fcc8353b1983",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "5592e1f9-e137-4e02-9f4e-65e6fe110098",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FPSMovementAction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2c5ce57f-d13a-411d-917a-4c738da55ae3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FPSMovementAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "19525059-21d7-4d2f-ace2-c7bd7bff2acc",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FPSMovementAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "aac9e68b-7dce-4372-b4de-4bf0d7c01b43",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FPSMovementAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "19135e50-d755-4f97-a7a3-d1493f675ac5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FPSMovementAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fb4a24a9-1aa2-4d19-893a-801a40ed98b3",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FPSJumpAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff18261c-0937-41a8-8d42-43461b80a891",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FPSLookAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}